--- a/visualizeDataProject/frontend/src/app/header/header.html
+++ b/visualizeDataProject/frontend/src/app/header/header.html
@@ -17,6 +17,9 @@
         <li class="nav-item">
           <a class="nav-link" routerLink="/testPage">TestPage</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/charts">Charts</a>
+        </li>
         <!-- <li class="nav-item">
           <a class="nav-link" href="#">Pricing</a>
         </li>
