--- a/visualizeDataProject/frontend/src/app/charts-ngx/charts-ngx.html
+++ b/visualizeDataProject/frontend/src/app/charts-ngx/charts-ngx.html
@@ -1,5 +1,5 @@
-<div class="container">
-    <h1>NGX Charts</h1>
+<div class="container my-4">
+  <h1 class="mb-4 text-center">NGX Charts</h1>
 
     <div *ngFor="let chart of chartData">
         <h2>{{ chart.name }}</h2>
@@ -19,11 +19,6 @@
             </ngx-charts-line-chart>
 
         </div>
-
-    <!-- <h1>Plotly Charts</h1>
-
-    <plotly-plot [data]="graph.data" [layout]="graph.layout"></plotly-plot>
-    <plotly-plot [data]="graph.data" [layout]="graph.layout" [config]="graph.config"></plotly-plot> -->
-
+    </div>
 
 </div>
