--- a/visualizeDataProject/frontend/src/app/header/header.html
+++ b/visualizeDataProject/frontend/src/app/header/header.html
@@ -1,9 +1,10 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">
-        <img src="assets/dummy-logo.png" alt="test" class="logo">
+      <img src="assets/dummy-logo.png" alt="test" class="logo">
     </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
@@ -15,17 +16,11 @@
           <a class="nav-link" routerLink="/notes">Notes</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/testPage">TestPage</a>
+          <a class="nav-link" routerLink="/charts-ngx">NGX Charts</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/charts">Charts</a>
+          <a class="nav-link" routerLink="/charts-plotly">Plotly Charts</a>
         </li>
-        <!-- <li class="nav-item">
-          <a class="nav-link" href="#">Pricing</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-        </li> -->
       </ul>
     </div>
   </div>
