--- a/frontend/src/app/charts-plotly/charts-plotly.html
+++ b/frontend/src/app/charts-plotly/charts-plotly.html
@@ -1,12 +1,23 @@
 <div class="container my-4">
-  <h1 class="mb-4 text-center">Plotly Charts</h1>
+    <h1 class="mb-4 text-center">Plotly Charts</h1>
 
-    <div *ngFor="let graph of graphs">
-
-        <div *ngIf="graph.data.length">
-            <plotly-plot [data]="graph.data" [layout]="graph.layout" [config]="graph.config"></plotly-plot>
+    <!-- Show spinner while chartData is loading -->
+    <div *ngIf="!graphs || graphs.length === 0" class="d-flex justify-content-center align-items-center"
+        style="height: 200px;">
+        <div class="spinner-border text-primary" role="status">
+            <span class="visually-hidden">Loading...</span>
         </div>
+    </div>
 
+    <!-- Show charts once data is available -->
+    <div *ngIf="graphs && graphs.length > 0">
+        <div *ngFor="let graph of graphs">
+
+            <div *ngIf="graph.data.length">
+                <plotly-plot [data]="graph.data" [layout]="graph.layout" [config]="graph.config"></plotly-plot>
+            </div>
+
+        </div>
     </div>
 
 </div>
