--- a/frontend/src/app/home/home.html
+++ b/frontend/src/app/home/home.html
@@ -1,3 +1,52 @@
-<div class="container">
-    <h1>Home</h1>
+<div class="container my-5">
+  <h1 class="text-center mb-5">Welcome to the Dashboard</h1>
+
+  <div class="row g-4 justify-content-center">
+
+    <!-- Data Page -->
+    <div class="col-md-4">
+      <div class="card h-100 shadow-sm border-0">
+        <div class="card-body text-center">
+          <h3 class="card-title mb-3">Notes</h3>
+          <p class="card-text">
+            To show a database connection to the backend. View and manage notes loaded into the application. 
+          </p>
+          <a routerLink="/notes" class="btn btn-secondary mt-2">Go to Data</a>
+        </div>
+      </div>
+    </div>
+
+    <!-- Charts Page -->
+    <div class="col-md-4">
+      <div class="card h-100 shadow-sm border-0">
+        <div class="card-body text-center">
+          <h3 class="card-title mb-3">NGX Charts</h3>
+          <p class="card-text">
+            Data visualization. Data is fetched from a backend API in which the data is prepared. A spinner is shown until the data is there. 
+          </p>
+          <a routerLink="/charts-ngx" class="btn btn-secondary mt-2">Go to NXG Charts</a>
+        </div>
+      </div>
+    </div>
+
+    <!-- Charts Page -->
+    <div class="col-md-4">
+      <div class="card h-100 shadow-sm border-0">
+        <div class="card-body text-center">
+          <h3 class="card-title mb-3">Plotly Charts</h3>
+          <p class="card-text">
+            Data visualization. Data is fetched from a backend API in which the data is prepared. A spinner is shown until the data is there. 
+          </p>
+          <a routerLink="/charts-plotly" class="btn btn-secondary mt-2">Go to Plotly Charts</a>
+        </div>
+      </div>
+    </div>
+
+
+  </div>
+
+  <div class="row mt-4 g4">
+    <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+    <p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+  </div>
 </div>
