updated sequence view

--- a/frontend/src/app/header/header.html
+++ b/frontend/src/app/header/header.html
@@ -16,6 +16,9 @@
           <a class="nav-link" routerLink="/notes">Notes</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" routerLink="/sequence/1">Sequence Viewer</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" routerLink="/charts-ngx">NGX Charts</a>
         </li>
         <li class="nav-item">
