tested interactive plot view

--- a/frontend/src/app/header/header.html
+++ b/frontend/src/app/header/header.html
@@ -24,6 +24,9 @@
         <li class="nav-item">
           <a class="nav-link" routerLink="/charts-plotly">Plotly Charts</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/interactive-plot">Interactive Plot</a>
+        </li>
       </ul>
     </div>
   </div>
