created new sequence viewer frontend with new api connection

--- a/frontend/src/app/header/header.html
+++ b/frontend/src/app/header/header.html
@@ -16,7 +16,10 @@
           <a class="nav-link" routerLink="/notes">Notes</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/sequence/1">Sequence Viewer</a>
+          <a class="nav-link" routerLink="/sequence-viewer">Sequence Viewer</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/sequence/1">Sequences</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" routerLink="/charts-ngx">NGX Charts</a>
