--- a/frontend/src/app/header/header.html
+++ b/frontend/src/app/header/header.html
@@ -13,13 +13,10 @@
           <a class="nav-link active" aria-current="page" href="#">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/notes">Notes</a>
-        </li>
-        <li class="nav-item">
           <a class="nav-link" routerLink="/sequence-viewer">Sequence Viewer</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/sequence/1">Sequences</a>
+          <a class="nav-link" routerLink="/notes">Notes</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" routerLink="/charts-ngx">NGX Charts</a>
@@ -27,9 +24,9 @@
         <li class="nav-item">
           <a class="nav-link" routerLink="/charts-plotly">Plotly Charts</a>
         </li>
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a class="nav-link" routerLink="/interactive-plot">Interactive Plot</a>
-        </li>
+        </li> -->
       </ul>
     </div>
   </div>
