Updated documentation and added screenshots to README

--- a/frontend/src/app/header/header.scss
+++ b/frontend/src/app/header/header.scss
@@ -1,6 +1,7 @@
 .navbar {
     padding: 10px;
-    background: burlywood!important;
+    background: #84d9cd!important;
+    // background: burlywood!important;
     margin-bottom: 20px;
 }
 
