--- a/frontend/src/app/home/home.html
+++ b/frontend/src/app/home/home.html
@@ -1,6 +1,16 @@
 <div class="container my-5">
   <h1 class="text-center mb-5">Welcome to the Dashboard</h1>
 
+
+  <div class="p-5 mb-4 bg-body-tertiary rounded-3 jumbotron-bg">
+    <div class="container-fluid py-5 text-white">
+      <h1 class="display-5 fw-bold">Sequence Viewer</h1>
+      <p class="col-md-8 fs-4">Click the link below to navigate to the sequence viewer, an interactive
+          graphic-visualization page.</p>
+      <p> <a href="/sequence-viewer" class="btn btn-secondary my-2">Go to Sequence Viewer</a>
+    </div>
+  </div>
+
   <div class="row g-4 justify-content-center">
 
     <!-- Data Page -->
@@ -9,7 +19,7 @@
         <div class="card-body text-center">
           <h3 class="card-title mb-3">Notes</h3>
           <p class="card-text">
-            To show a database connection to the backend. View and manage notes loaded into the application. 
+            To show a database connection to the backend. View and manage notes loaded into the application.
           </p>
           <a routerLink="/notes" class="btn btn-secondary mt-2">Go to Data</a>
         </div>
@@ -20,9 +30,10 @@
     <div class="col-md-4">
       <div class="card h-100 shadow-sm border-0">
         <div class="card-body text-center">
-          <h3 class="card-title mb-3">NGX Charts</h3>
+          <h3 class="card-title mb-3">(tmp) NGX Charts</h3>
           <p class="card-text">
-            Data visualization. Data is fetched from a backend API in which the data is prepared. A spinner is shown until the data is there. 
+            Data visualization. Data is fetched from a backend API in which the data is prepared. A spinner is shown
+            until the data is there.
           </p>
           <a routerLink="/charts-ngx" class="btn btn-secondary mt-2">Go to NXG Charts</a>
         </div>
@@ -33,9 +44,10 @@
     <div class="col-md-4">
       <div class="card h-100 shadow-sm border-0">
         <div class="card-body text-center">
-          <h3 class="card-title mb-3">Plotly Charts</h3>
+          <h3 class="card-title mb-3">(tmp) Plotly Charts</h3>
           <p class="card-text">
-            Data visualization. Data is fetched from a backend API in which the data is prepared. A spinner is shown until the data is there. 
+            Data visualization. Data is fetched from a backend API in which the data is prepared. A spinner is shown
+            until the data is there.
           </p>
           <a routerLink="/charts-plotly" class="btn btn-secondary mt-2">Go to Plotly Charts</a>
         </div>
@@ -46,7 +58,18 @@
   </div>
 
   <div class="row mt-4 g4">
-    <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
-    <p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+    <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
+      dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita
+      kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur
+      sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam
+      voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata
+      sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy
+      eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo
+      duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+    <p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu
+      feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril
+      delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed
+      diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
   </div>
+
 </div>
