--- a/frontend/src/app/home/home.scss
+++ b/frontend/src/app/home/home.scss
@@ -11,3 +11,10 @@
 h1 {
   font-weight: 600;
 }
+
+.jumbotron-bg {
+  background-image: url('../../assets/business-5475664_1920.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
