--- a/frontend/src/app/header/header.html
+++ b/frontend/src/app/header/header.html
@@ -1,33 +1,37 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">
-      <img src="assets/dummy-logo.png" alt="test" class="logo">
-    </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav ms-auto">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/sequence-viewer">Sequence Viewer</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/notes">Notes</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/charts-ngx">NGX Charts</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/charts-plotly">Plotly Charts</a>
-        </li>
-        <!-- <li class="nav-item">
-          <a class="nav-link" routerLink="/interactive-plot">Interactive Plot</a>
-        </li> -->
-      </ul>
-    </div>
+<div class="navbar-bg">
+  <div class="container">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">
+          <img src="assets/dummy-logo.png" alt="test" class="logo">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" routerLink="/sequence-viewer">Sequence Viewer</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" routerLink="/notes">Notes</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" routerLink="/charts-ngx">NGX Charts</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" routerLink="/charts-plotly">Plotly Charts</a>
+            </li>
+            <!-- <li class="nav-item">
+              <a class="nav-link" routerLink="/interactive-plot">Interactive Plot</a>
+            </li> -->
+          </ul>
+        </div>
+      </div>
+    </nav>
   </div>
-</nav>
+</div>
